[package]
name = "g-flite"
version = "0.3.0"
authors = ["Jakub Konka <jakub.konka@golem.network>"]
edition = "2018"

[dependencies]
serde = "1.0.91"
serde_json = "1.0.39"
indicatif = "0.11.0"
console = "0.7.7"
actix = "0.8.3"
log = "0.4.6"
env_logger = "0.6.1"
failure="0.1.5"
appdirs = "0.2"
actix-wamp = { git="https://github.com/golemfactory/golem-client" }
golem-rpc-api = { git="https://github.com/golemfactory/golem-client" }
golem-rpc-macros = { git="https://github.com/golemfactory/golem-client" }
hound = { git="https://github.com/kubkon/hound" }
openssl = "0.10.20"
structopt = "0.2.18"
chrono = "0.4.7"
ctrlc = "3.0"

[features]
openssl_vendored = ["openssl/vendored"]

[[bin]]
name = "g_flite"
path = "src/main.rs"
