[package]
name = "g-flite"
version = "0.4.1"
authors = ["Golem RnD Team <contact@golem.network>"]
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
description = "g-flite: flite distributed over Golem Network"

[dependencies]
serde = "1.0.91"
serde_json = "1.0.39"
indicatif = "0.11.0"
console = "0.7.7"
log = "0.4.6"
env_logger = "0.6.1"
failure="0.1.5"
appdirs = "0.2"
gwasm-api = "0.1"
hound = { git = "https://github.com/kubkon/hound" }
openssl = "0.10.20"
structopt = "0.2.18"
tempfile = "3.1.0"
colored = "1.8"

[features]
openssl_vendored = ["openssl/vendored"]

[[bin]]
name = "g_flite"
path = "src/main.rs"
